--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -246,6 +246,8 @@ p, ul, ol, dl {
     -moz-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
     -o-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
     margin: 0 0 1.75em 0;
+    -webkit-margin-before: 0em;
+    -webkit-margin-after: 0em;
 }
 
 ol, ul {
