--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,11 @@
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="http://img7.chztv.com/nikki_favicon.ico">
-    <link rel="stylesheet" type="text/css" href="/blog/assets/css/screen.css" />
-    <link rel="stylesheet" type="text/css" href="/blog/assets/css/typo.css" />
+    <link rel="stylesheet" type="text/css" href="/p/assets/css/screen.css" />
+    <link rel="stylesheet" type="text/css" href="/p/assets/css/typo.css" />
     <!--link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" /-->
     <!-- Customisation  -->
-    <link rel="stylesheet" type="text/css" href="/blog/assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/p/assets/css/main.css" />
 
 </head>
 <body class="{% if page.post_class %}{{page.post_class}}{% else %}home-template{% endif %}">
