--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
       </section>
     </footer>
     
-    <script type="text/javascript" src="http://cdn.staticfile.org/jquery/2.0.0/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdn.staticfile.org/jquery/2.0.0/jquery.min.js"></script>
     <script type="text/javascript" src="/blog/assets/js/jquery.fitvids.js"></script>
     <script type="text/javascript" src="/blog/assets/js/index.js"></script>
 
