--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,13 +25,13 @@
       <section class="copyright serif typo-small">
         Written by<a href="{{ site.baseurl }}">Paul Chan,</a> &copy; all right reserved.
       </section>
-      <section class="poweredby serif typo-small">Made with Jekyll, <a href="http://github.com/rosario/kasper">Paul&Reina Theme</a> Modified by <a href="http://github.com/rosario/kasper">Kasper theme</a>
+      <section class="poweredby serif typo-small">Made with Jekyll, <a href="//github.com/rosario/kasper">Paul&Reina Theme</a> Modified by <a href="//github.com/rosario/kasper">Kasper theme</a>
       </section>
     </footer>
     
     <script type="text/javascript" src="//cdn.staticfile.org/jquery/2.0.0/jquery.min.js"></script>
-    <script type="text/javascript" src="/blog/assets/js/jquery.fitvids.js"></script>
-    <script type="text/javascript" src="/blog/assets/js/index.js"></script>
+    <script type="text/javascript" src="/p/assets/js/jquery.fitvids.js"></script>
+    <script type="text/javascript" src="/p/assets/js/index.js"></script>
 
     <!-- Google Analytics Tracking code -->
     <!--script type="text/javascript">
