--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="http://img7.chztv.com/nikki_favicon.ico">
+    <link rel="icon" href="/p/nikki_favicon.ico">
     <link rel="stylesheet" type="text/css" href="/p/assets/css/screen.css" />
     <link rel="stylesheet" type="text/css" href="/p/assets/css/typo.css" />
     <!--link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" /-->
