--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -898,15 +898,15 @@ body:not(.post-template) .post-title {
 
 /* Keep images centred and within the bounds of the post-width */
 .post-content img {
-    display: inline-block;
-    max-width: 100%;
+    display: block;
+    max-width: 95%;
     height: auto;
     /*margin: 0 auto;*/
-    padding: 0.6em 0;
+    /*padding: 0.6em 0;*/
 }
 
 .post-content p {
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
 }
 
 /* Break out larger images to be wider than the main text column
